right now leaderboard is working and I got pagenation going with top and my stats