@@ -1,8 +1,6 @@
 package com.example.Unit_2_Project.controller;
 
 import com.example.Unit_2_Project.dto.LeaderBoardEntryDTO;
-
-
 import com.example.Unit_2_Project.dto.QuizAttemptDTO;
 import com.example.Unit_2_Project.dto.SubjectDTO;
 import com.example.Unit_2_Project.dto.UserDTO;
@@ -10,11 +8,18 @@ import com.example.Unit_2_Project.model.QuizAttempt;
 import com.example.Unit_2_Project.repository.QuizAttemptRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import com.example.Unit_2_Project.model.Subject;
 import java.util.List;
 import java.util.stream.Collectors;
+
+import static org.hibernate.query.Page.page;
 
 @RestController
 @RequestMapping("/api/leaderboard")
@@ -26,14 +31,20 @@ public class LeaderBoardController {
     private QuizAttemptRepository quizAttemptRepo;
 
     @GetMapping("/top")
-    public ResponseEntity<List<QuizAttemptDTO>> getTopScores() {
-        List<QuizAttempt> attempts =
-                quizAttemptRepo.findAllByOrderByScoreDescDurationAsc();
-        List<QuizAttemptDTO> dtoList = attempts.stream()
-                .map(this::mapToDto)              // ← now this resolves
-                .collect(Collectors.toList());
+    public ResponseEntity<List<QuizAttemptDTO>> getTopScores(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "15") int size
+    ) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("score").descending().and(Sort.by("duration").ascending()));
+        Page<QuizAttempt> resultPage = quizAttemptRepo.findAllByOrderByScoreDescDurationAsc(pageable);
+        List<QuizAttemptDTO> dtoList = resultPage.getContent().stream()
+                .map(this::mapToDto)
+                .toList();
         return ResponseEntity.ok(dtoList);
     }
+
+
+
 
     @GetMapping("/subject/{subjectId}")
     public ResponseEntity<List<QuizAttemptDTO>> getBySubject(
@@ -48,14 +59,23 @@ public class LeaderBoardController {
 
     @GetMapping("/user/{userId}")
     public ResponseEntity<List<QuizAttemptDTO>> getByUser(
-            @PathVariable Integer userId) {
-        List<QuizAttempt> attempts =
-                quizAttemptRepo.findByUserIdOrderByScoreDescDurationAsc(userId);
-        List<QuizAttemptDTO> dtoList = attempts.stream()
+            @PathVariable Integer userId,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "15") int size) {
+
+        Pageable pageable = PageRequest.of(page, size, Sort.by("score").descending()
+                .and(Sort.by("duration").ascending()));
+
+        Page<QuizAttempt> resultPage = quizAttemptRepo
+                .findByUserIdOrderByScoreDescDurationAsc(userId, pageable);
+
+        List<QuizAttemptDTO> dtoList = resultPage.getContent().stream()
                 .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
+
         return ResponseEntity.ok(dtoList);
     }
+
 
     // ─── Helper: Convert Entity → DTO ───────────────────────────
     private QuizAttemptDTO mapToDto(QuizAttempt attempt) {
